fixed horizontal scrollbar

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,7 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 h2 {
